# cpp-library-template

./: .gitignore  CMakeLists.txt  install
tests/: CMakeLists.txt  gtest.cpp  test_check_sum_and_diff.cpp  test_check_sum_and_diff_HeaderOnly.cpp
